--- a/pixi.html
+++ b/pixi.html
@@ -6,8 +6,10 @@
 </head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script>
 <body>
+    <div id="score"></div>
     <script src="testPixi.js"></script>
     <!--<script src="container.js"></script>-->
-    <style>* {padding: 0; margin: 0}</style>
+    <style>* {padding: 10px; margin: 0}</style>
+    
 </body>
 </html>
